Fix misaligned text on /me when link text wraps

--- a/client/layout/sidebar/style.scss
+++ b/client/layout/sidebar/style.scss
@@ -65,6 +65,7 @@
 .sidebar__menu-icon {
 	fill: var( --color-sidebar-gridicon-fill );
 	margin-right: 11px;
+	flex-shrink: 0;
 }
 
 // Checklist progress
